[package]
name = "databuffer"
version = "1.0.1"
authors = ["Terah <terah.dev@gmail.com>", "Shiroy <awacheux.utc@gmail.com>", "Ceikry <ironceikry@gmail.com>"]
description = "A feature rich binary buffer for use with networking and binary protocols."
homepage = "https://github.com/ceikry/databuffer"
repository = "https://github.com/ceikry/databuffer"
keywords = ["byte", "buffer", "network", "protocol", "databuffer"]
license = "MIT OR Apache-2.0"

[lib]
name = "databuffer"

[dependencies]
byteorder = "1"

[badges]
travis-ci = { repository = "ceikry/databuffer" }